# doof

./: .gitignore  .npmignore  AGENTS.md  README.md  doof.json  doof_observer_platform.h  doof_observer_runtime.h  doof_runtime.cpp  doof_runtime.h  genericsPlan.md  package-lock.json  package.json  stdlib-packages.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  vitest.shared.ts
.github/: copilot-instructions.md
docs/: actor-affine-callbacks-design.md  actor-memory-isolation-plan.md  architecture.md  cli.md  concurrency-design.md  concurrency-redesign-implementation-plan.md  cpp-transpilation-concepts.md  cpp-transpiler-architecture.md  cpp-transpiler-plan.md  lambdas.md  null-safety-operators.md  packages.md  reference-selfhost-gap-analysis.md  selfhost-bootstrap-progress.md  selfhost-module-acquisition-plan.md  source-file-structure.md  source-maps.md  syntax.md  testing.md  type-checker-concepts.md
enhancements/: Async.md  Immutability.md  TODO.md
integration/: .gitignore  run-tests.ts  test-utils.ts
observer-ui/: app.css  app.js  index.html
playground/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
samples/: classes.do  closures.do  concurrency.do  fibonacci.do  fizzbuzz.do  hello.do  patterns.do  results.do
samples/cube/: CMakeLists.txt  README.md  build.sh  metal_bridge.h  metal_graphics.do  rotating_cube_v2.do  sdl_metal_bridge.h  sdl_metal_bridge.mm  shaders.metal
samples/lib/cardgame/engine/: CMakeLists.txt
samples/lib/cardgame/engine/math/: MathUtil.cpp  MathUtil.h
samples/lib/cardgame/engine/render/: MetalRenderer.h  MetalRenderer.mm  TextureLoader.h  TextureLoader.mm  TextureRegistry.h  TextureRegistry.mm  Vertex.h
samples/seahaven-towers/: CMakeLists.txt  Info.plist.in  README.md  app-state.do  build.sh  camera.do  doof.json  host.do  main.do  render.do  seahaven-towers.do  seahaven.do  seahaven.test.do
scripts/: build-seahaven-towers-macos.sh  build-seahaven-towers-windows.ps1  build-solitaire-ios-device.sh  build-solitaire-ios-simulator.sh  build-solitaire-macos.sh  build-solitaire-windows.ps1  generate-macos-icon.sh  generate-std-catalog.mjs  local-global-dev.mjs  release-gate.mjs  sync-stdlib.mjs
selfhost/: analyzer.do  analyzer.test.do  ast.do  bootstrap.test.do  checker-actor-boundary.do  checker-actor-lifecycle.do  checker-calls.do  checker-common.do  checker-expressions.do  checker-generics.do  checker-interfaces.do  checker-literals.do  checker-resolution.do  checker-state.do  checker-statements.do  checker-symbols.do  checker-types.do  checker-validation.do  checker.do  checker.test.do  cli.do  cli.test.do  compiler.do  compiler.test.do  driver.do  emitter-case-pattern.do  emitter-context.do  emitter-decl.do  emitter-expr-actor.do  emitter-expr-calls.do  emitter-expr-control.do  emitter-expr-lambda.do  emitter-expr-literals.do  emitter-expr-ops.do  emitter-expr-utils.do  emitter-expr.do  emitter-header.do  emitter-json.do  emitter-module.do  emitter-monomorphize.do  (+42 more)
spec/: 01-overview.md  02-type-system.md  03-variables-and-bindings.md  04-functions-and-lambdas.md  05-operators.md  06-control-flow.md  07-classes-and-interfaces.md  08-pattern-matching.md  09-error-handling.md  10-concurrency.md  11-modules.md  12-json-serialization.md  13-descriptions.md  14-stdlib.md
src/: analyzer-advanced.test.ts  analyzer-basics.test.ts  analyzer-test-helpers.ts  analyzer.ts  any-runtime.ts  app-info-plist.ts  apple-embedded-libraries.test.ts  apple-embedded-libraries.ts  ast.ts  bin.test.ts  bin.ts  build-targets.ts  checker-actor-boundary.test.ts  checker-actor-boundary.ts  checker-collection-annotations.test.ts  checker-collection-annotations.ts  checker-compat.test.ts  checker-control-flow.ts  checker-decl.ts  checker-declared-values.ts  checker-diagnostics.ts  checker-expr-ops.ts  checker-expr.test.ts  checker-expr.ts  checker-features.test.ts  checker-generics.test.ts  checker-inference.test.ts  checker-internal.ts  checker-isolation.ts  checker-member.ts  checker-readonly.test.ts  checker-readonly.ts  checker-result.ts  checker-stmt.ts  checker-test-helpers.ts  checker-types.test.ts  checker-types.ts  checker-validation.test.ts  checker.ts  cli-core.test.ts  (+117 more)
test/: array-printing.spec.ts  async-await.spec.ts  boolean-serialization.spec.ts  break-continue-codegen.spec.ts  char-string.spec.ts  char-to-string-validation.spec.ts  cli.spec.ts  codegen.spec.ts  concise-lambda-simple.spec.ts  concise-lambda.spec.ts  const-array.spec.ts  const-field-inference.spec.ts  const-field-integration.spec.ts  const-fields.spec.ts  const-readonly-focused.spec.ts  debug-extern-advanced.spec.ts  debug-extern.spec.ts  debug-narrowing.spec.ts  debug-regex.spec.ts  default-parameters.spec.ts  definite_assignment.spec.ts  destructuring-patterns.spec.ts  discriminated-union-type-narrowing-README.md  discriminated-union-type-narrowing.spec.ts  duck-interface.unit.spec.ts  enum-shorthand-array.spec.ts  enum-shorthand-extended.spec.ts  escaping-concise.spec.ts  extern-class-constructor.spec.ts.disabled  extern-class.spec.ts  extern-metadata.spec.ts  flow-managed-conditionals.spec.ts  fluent-interface.spec.ts  formatter-comments.spec.ts  (+83 more)
unity/DominoRemoteRunner/: CMakeLists.txt  DominoRemoteRunnerBehaviour.cs  DominoRemoteRunnerExtern.h  DominoRemoteRunnerNative.h  DoofRemoteRunnerNative.h  README.md  build.sh  remote_runner.cpp  remote_runner.h  test_client.cpp
unity/DominoRemoteRunner/domino/: remote_runner_bridge.do
vm/: CMakeLists.txt  Package.swift  README.md
vm/include/: DominoVM.h  DoofVM.h  dap.h  debug.h  domino_vm_c.h  doof_vm_c.h  frame.h  iterator.h  json.h  module.modulemap  opcodes.h  value.h  vm.h  vm_glue_helpers.h
vm/scripts/: build_xcframework.sh  rebuild_and_bundle_json_runner.sh
vm/src/: benchmark.cpp  dap.cpp  dap_channel.cpp  dap_channel.h  debug.cpp  domino_vm_c.cpp  doof_vm_c.cpp  iterator.cpp  json_bytecode_loader.cpp  json_bytecode_loader.h  json_runner.cpp  main.cpp  map_set_test.cpp  remote_server.cpp  simple_benchmark.cpp  validation_test.cpp  vm.cpp
vm/tests/: dap_channel_test.cpp
(+446 files in other folders)
